Se creo un modal para mostra el detalle de los proyectos

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -8,7 +8,7 @@
             "image": "",
             "autoria": "propia",
             "tecnologies": [
-
+                { "tittle": "Redux", "icon": "redux.svg" }
             ]
         },
         {
