--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@react-spring/web": "^9.7.5",
     "next": "15.0.0",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
