--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@react-spring/web": "^9.7.5",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "next": "15.0.0",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
@@ -20,6 +22,7 @@
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
